--- a/codebase/templates/welcome.html
+++ b/codebase/templates/welcome.html
@@ -38,13 +38,13 @@
           </span>
           
           <div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
-            <input class="input100" type="text" name="email">
+            <input class="input100" type="text" name="email" id="email">
             <span class="focus-input100"></span>
             <span class="label-input100">Email</span>
           </div>
           
           <div class="wrap-input100 validate-input" data-validate="Password is required">
-            <input class="input100" type="password" name="pass">
+            <input class="input100" type="password" name="pass" id="password">
             <span class="focus-input100"></span>
             <span class="label-input100">Password</span>
           </div>
@@ -69,8 +69,10 @@
       var xhttp = new XMLHttpRequest();
       var url = "http://localhost:5000/login";
       var formData = new FormData();
-      formData.append("username", "user");
-      formData.append("password", "password");
+      email = document.getElementById("email").value;
+      password = document.getElementById("password").value;
+      formData.append("username", email);
+      formData.append("password", password);
       xhttp.onreadystatechange = function(){
         if (this.readyState == 4 && this.status == 200) {
             window.location.href = "http://localhost:5000/chat";
